<resources>
    <string name="app_name" translatable="false">GloblinkVPN</string>
    <string name="app_widget_name">Switch</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="migration_success">Data migration success!</string>
    <string name="migration_fail">Data migration failed!</string>
    <string name="pull_down_to_refresh">Please pull down to refresh!</string>
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="toast_permission_denied_notification">Unable to obtain the notification permission</string>
    <string name="notification_action_more">click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>
    <string name="title_server">Configuration file</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config">Import Configuration</string>
    <string name="menu_item_import_config_qrcode">Scan QR Code</string>
    <string name="menu_item_import_config_clipboard">Import from Clipboard</string>
    <string name="menu_item_import_config_manually_vmess">Add VMess Server</string>
    <string name="menu_item_import_config_manually_vless">Add VLESS Server</string>
    <string name="menu_item_import_config_manually_ss">Add Shadowsocks Server</string>
    <string name="menu_item_import_config_manually_socks">Add SOCKS Server</string>
    <string name="menu_item_import_config_manually_http">Add HTTP Server</string>
    <string name="menu_item_import_config_manually_trojan">Add Trojan Server</string>
    <string name="menu_item_import_config_manually_wireguard">Add WireGuard Server</string>
    <string name="menu_item_import_config_manually_hysteria2">Add Hysteria2 Server</string>
    <string name="menu_item_import_config_custom">Import Custom Configuration</string>
    <string name="menu_item_import_config_custom_clipboard">Import from Clipboard</string>
    <string name="menu_item_import_config_custom_local">Import from Local File</string>
    <string name="menu_item_import_config_custom_url">Import from URL</string>
    <string name="menu_item_import_config_custom_url_scan">Scan URL QR Code</string>
    <string name="del_config_comfirm">Confirm delete ?</string>
    <string name="del_invalid_config_comfirm">Please test before deleting! Confirm delete ?</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_mode_type">gRPC mode</string>
    <string name="server_lab_request_host">host</string>
    <string name="server_lab_request_host_http">http host</string>
    <string name="server_lab_request_host_ws">ws host</string>
    <string name="server_lab_request_host_httpupgrade">httpupgrade host</string>
    <string name="server_lab_request_host_xhttp">xhttp host</string>
    <string name="server_lab_request_host_h2">h2 host</string>
    <string name="server_lab_request_host_quic">QUIC security</string>
    <string name="server_lab_request_host_grpc">gRPC Authority</string>
    <string name="server_lab_path">path</string>
    <string name="server_lab_path_ws">ws path</string>
    <string name="server_lab_path_httpupgrade">httpupgrade path</string>
    <string name="server_lab_path_xhttp">xhttp path </string>
    <string name="server_lab_path_h2">h2 path</string>
    <string name="server_lab_path_quic">QUIC key</string>
    <string name="server_lab_path_kcp">kcp seed</string>
    <string name="server_lab_path_grpc">gRPC serviceName</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="server_lab_stream_fingerprint" translatable="false">Fingerprint</string>
    <string name="server_lab_stream_alpn">Alpn</string>
    <string name="server_lab_allow_insecure">allowInsecure</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_address3">address</string>
    <string name="server_lab_port3">port</string>
    <string name="server_lab_id3">password</string>
    <string name="server_lab_security3">security</string>
    <string name="server_lab_id4">Password(Optional)</string>
    <string name="server_lab_security4">User(Optional)</string>
    <string name="server_lab_encryption">encryption</string>
    <string name="server_lab_flow">flow</string>
    <string name="server_lab_public_key">PublicKey</string>
    <string name="server_lab_preshared_key">PreSharedKey(optional)</string>
    <string name="server_lab_short_id">ShortId</string>
    <string name="server_lab_spider_x">SpiderX</string>
    <string name="server_lab_secret_key">SecretKey</string>
    <string name="server_lab_reserved">Reserved(Optional, separated by commas)</string>
    <string name="server_lab_local_address">Local address (optional IPv4/IPv6, separated by commas)</string>
    <string name="server_lab_local_mtu">Mtu(optional, default 1420)</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_none_data">There is nothing</string>
    <string name="toast_incorrect_protocol">Incorrect protocol</string>
    <string name="toast_decoding_failed">Decoding failed</string>
    <string name="title_file_chooser">Select a Config File</string>
    <string name="toast_require_file_manager">Please install a File Manager.</string>
    <string name="server_customize_config">Customize Config</string>
    <string name="toast_config_file_invalid">Invalid Config</string>
    <string name="server_lab_content">Content</string>
    <string name="toast_none_data_clipboard">There is no data in the clipboard</string>
    <string name="toast_invalid_url">Invalid URL</string>
    <string name="toast_insecure_url_protocol">Please do not use the insecure HTTP protocol subscription address</string>
    <string name="server_lab_need_inbound">Ensure inbounds port is consistent with the settings</string>
    <string name="toast_malformed_josn">Config malformed</string>
    <string name="server_lab_request_host6">Host(SNI)(Optional)</string>
    <string name="toast_asset_copy_failed">File copy failed, please use File Manager</string>
    <string name="menu_item_add_asset">Add asset</string>
    <string name="menu_item_add_file">Add files</string>
    <string name="menu_item_add_url">Add URL</string>
    <string name="menu_item_scan_qrcode">Scan QRcode</string>
    <string name="title_url">URL</string>
    <string name="menu_item_download_file">Download files</string>
    <string name="title_user_asset_add_url">Add asset URL</string>
    <string name="msg_file_not_found">File not found</string>
    <string name="msg_remark_is_duplicate">The remarks already exists</string>
    <string name="toast_action_not_allowed">Action not allowed</string>
    <string name="server_obfs_password">Obfs password</string>
    <string name="server_lab_port_hop">Port Hopping(will override the port)</string>
    <string name="server_lab_port_hop_interval">Port Hopping Interval</string>
    <string name="server_lab_stream_pinsha256">pinSHA256</string>
    <string name="server_lab_bandwidth_down">Bandwidth down (units)</string>
    <string name="server_lab_bandwidth_up">Bandwidth up (units)</string>
    <string name="server_lab_xhttp_mode">XHTTP Mode</string>
    <string name="server_lab_xhttp_extra">XHTTP Extra raw JSON, format: { XHTTPObject }</string>
    <string name="msg_dialog_progress">Loading</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_select_all">Select all</string>
    <string name="msg_enter_keywords">Enter keywords</string>
    <string name="switch_bypass_apps_mode">Bypass Mode</string>
    <string name="menu_item_select_proxy_app">Auto select proxy app</string>
    <string name="msg_downloading_content">Downloading content</string>
    <string name="menu_item_export_proxy_app">Export to Clipboard</string>
    <string name="menu_item_import_proxy_app">Import from Clipboard</string>
    <string name="title_settings">Settings</string>
    <string name="title_advanced">Advanced Settings</string>
    <string name="title_vpn_settings">VPN Settings</string>
    <string name="title_pref_per_app_proxy">Per-app proxy</string>
    <string name="summary_pref_per_app_proxy">General: Checked App is proxy, unchecked direct connection; \nbypass mode: checked app directly connected, unchecked proxy. \nThe option to automatically select the proxy application in the menu</string>
    <string name="title_pref_is_booted">Auto connect at startup</string>
    <string name="summary_pref_is_booted">Automatically connects to the selected server at startup, which may be unsuccessful</string>
    <string name="title_mux_settings">Mux Settings</string>
    <string name="title_pref_mux_enabled">Enable Mux</string>
    <string name="summary_pref_mux_enabled">Faster, but it may cause unstable connectivity\ncustomize how to handle TCP, UDP and QUIC below</string>
    <string name="title_pref_mux_concurency">TCP connections（range -1 to 1024）</string>
    <string name="title_pref_mux_xudp_concurency">XUDP connections（range -1 to 1024）</string>
    <string name="title_pref_mux_xudp_quic">Handling of QUIC in mux tunnel</string>
    <string-array name="mux_xudp_quic_entries">
        <item>reject</item>
        <item>allow</item>
        <item>skip</item>
    </string-array>
    <string name="title_pref_speed_enabled">Enable speed display</string>
    <string name="summary_pref_speed_enabled">Display current speed in the notification.\nNotification icon would change based on
        usage.</string>
    <string name="title_pref_sniffing_enabled">Enable Sniffing</string>
    <string name="summary_pref_sniffing_enabled">Try sniff domain from the packet (default on)</string>
    <string name="title_pref_route_only_enabled">Enable routeOnly</string>
    <string name="title_sub_update">Update current group subscription</string>
    <string name="pref_general">General</string>
    <string name="pref_theme">Theme</string>
    <string name="pref_theme_summary">Choose app theme</string>
    <string name="pref_language">Language</string>
    <string name="pref_language_summary">Choose app language</string>
    <string name="pref_vpn">VPN</string>
    <string name="pref_vpn_dns">VPN DNS</string>
    <string name="pref_vpn_dns_summary">Configure DNS settings for VPN</string>
    <string name="pref_vpn_mtu">VPN MTU</string>
    <string name="pref_vpn_mtu_summary">Configure MTU settings for VPN</string>
    <string name="pref_about">About</string>
    <string name="pref_about_version">Version</string>
    <string name="pref_about_version_summary">Current app version</string>
    <string name="pref_about_license">License</string>
    <string name="pref_about_license_summary">View open source licenses</string>
</resources>